src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@binary-spec-source-record.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: package 'source' is locked as source, but is only required as binary
