src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@expected-editable-multiple.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: expected bar and foo to be editable but in the lock-file but they are not, whereas baz is NOT expected to be editable which in the lock-file it is
