src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mixed-pypi-conda.snap
---
source: src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: there are more conda packages in the lock-file than are used by the environment: flask
