src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@source-dependency-changed-project-model.snap
---
source: src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'linux-64'
    Diagnostic severity: error
    Caused by: the input hash for 'child-package' (fe9f9d8faf93bd5d53af4b126c6817e82380a0868ead55378b9fe6aeeb06344d) does not match the hash in the lock-file (ba88b9c1df60dd5ca438d3974deea12501b57e974b1bb79725630d44401cf0d9)
