src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@source-dependency.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: the input hash for 'child-package' (f72524d6ca020fe2a30ceeb88e1d4931d8b7d8a07ba02c86e9450d12726070ce) does not match the hash in the lock-file (b67010bf5bc5608db89c0399e726852b07a7ef4fb26b3aa18171f1d0f6a19c89)
