src/lock_file/satisfiability/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@source-recursive-dependency-mismatch.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: the requirement 'foobar ==0.2.0 baz' could not be satisfied (required by 'child-package @ child-package')
